# runexpy

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
examples/example1/: approx_pi.py  experiment.py  script.py
examples/example1/campaigns/experiment/: experiment.json
examples/example_pi/: approx_pi.py  experiment.py
src/pyexp/: campaign.py  database.py  result.py  runner.py  utils.py
src/runexpy/: campaign.py  database.py  result.py  runner.py  utils.py
tests/: conftest.py  test_campaign.py  test_database.py  test_runner.py
